--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,5 +19,8 @@
 <a th:href="@{/order}"> <b>ORDER</b> </a>
 </br>
 </br>
+<a th:href="@{/payment}"> <b>PAYMENT</b> </a>
+</br>
+</br>
 </body>
 </html>
